--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<h1>Propiedades</h1>
+<button [disabled]="btnDisabled">Enviar</button>
+<input type="text" [value]="name"/>
+<progress max="100" [value]="age"></progress>
+<input type="text" [value]="person.name"/>
+<hr />
 <h1>Hola mundo</h1>
 <h2>{{ 'Hola Mundo'}}</h2>
 <p>3 + 3 = {{ 3 + 3 }}</p>
