--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<h1>Ng Model</h1>
+<p>Nombre {{ name }}</p>
+<input type="text" [(ngModel)]="name"/>
+<hr />
 <h1>Eventos</h1>
 <button [disabled]="btnDisabled">Enviar</button>
 <button (click)="toggleButton()">Toggle button</button>
