--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<h1>*ngIf</h1>
+<input type="text" [(ngModel)]="person.name"/>
+<p *ngIf="person.name == 'christian'">Hola Christian</p>
+<p *ngIf="person.name == 'felipe';else elseBlock">Hola Felipe</p>
+<ng-template #elseBlock>
+  <p>bloque else</p>
+</ng-template>
+<hr />
 <h1>Ng Model</h1>
 <p>Nombre {{ name }}</p>
 <input type="text" [(ngModel)]="name"/>
