--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
+<h1>*ngFor</h1>
+<input type="text" [(ngModel)]="newName"/>
+<button (click)="addName()" [disabled]="newName == ''">Add name</button>
+<ul>
+  <li *ngIf="names.length == 0">No hay nombres</li>
+  <li *ngFor="let name of names; index as i">
+    {{i}} - {{ name }}
+    <button (click)="removeName(i)">remove</button>
+  </li>
+</ul>
+<hr />
 <h1>*ngIf</h1>
 <input type="text" [(ngModel)]="person.name"/>
 <p *ngIf="person.name == 'christian'">Hola Christian</p>
