--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
-<h1>*ngFor</h1>
+<h1>*ngFor objects</h1>
+<div>
+  <div *ngFor="let product of products">
+    <img width="250" [src]="product.image" alt="image">
+    <h2>{{ product.price }}</h2>
+    <p>{{ product.name }}</p>
+  </div>
+</div>
+<hr />
+<h1>*ngFor - primitivos</h1>
 <input type="text" [(ngModel)]="newName"/>
 <button (click)="addName()" [disabled]="newName == ''">Add name</button>
 <ul>
