--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,28 @@
+<h1>ngClass & ngStyle</h1>
+<input type="text" required #nameinput3="ngModel" [(ngModel)]="person.name"/>
+<hr class="line-error"
+  [ngClass]="{
+    'valid': nameinput3.valid,
+    'invalid': nameinput3.invalid
+   }"
+/>
+<div class="styles">
+  <div>
+    <input type="text" [(ngModel)]="box.width"/>
+    <input type="text" [(ngModel)]="box.height"/>
+    <input type="color" [(ngModel)]="box.background"/>
+  </div>
+  <div>
+    <div [ngStyle]="{
+      'width.px': box.width,
+      'height.px': box.height,
+      'background-color': box.background,
+      'display': 'block'
+    }"></div>
+  </div>
+</div>
+
+<hr />
 <h1>Class & style</h1>
 <input type="text" required #nameinput2="ngModel" [(ngModel)]="person.name"/>
 <p class="message-error" [class.active]="nameinput2.invalid">el campo es requerido</p>
